styles.css
/* Write your CSS here! */
body {
    margin: 8px;
    display: block;
    background-color: wheat;
}

#mainHeading {
    border: 1px solid black;
    background-color: rgb(97, 35, 196);
    padding-left: 450px;
    padding-right: 450px;
    font-size: 120px;
    color: red;
}

#testP {
    color: green;
}

.funParagraph {
    color: green;
}

img {
    max-width: 40%;
    height: auto;
    padding: auto;
}

#marquee {
    font-size: 15px;
    font-family: fantasy;
    font-size: 20px;
}

h2 {
    text-align: center;
    font-weight: bold;
    font-size: 100px;
    color: darkcyan;
}

p {
    font-size: 30px; 
}

footer {
    font-size: xx-small;
    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

.customizedSection {
    background-color: darkslateblue;
    color: coral;
}

.interestingImg {
    border: 10px solid orange;
}

figcaption {
    font-size: medium;
    padding-bottom: 0%;
    color: rgb(226, 43, 153);
}

